[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-reverse-proxy"
version = "0.1.0"
authors = [
  { name="Tomás", email="your.email@example.com" },
]
description = "A robust, streaming-capable reverse proxy for FastAPI including WebSocket support."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
]

[tool.setuptools]
py-modules = ["proxy_pass", "proxy_httpx"]
