[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-reverse-proxy"
version = "0.1.1"
authors = [
  { name="Tomás", email="tomas@suricatingss.xyz" },
]
description = "A robust, streaming-capable reverse proxy for FastAPI including WebSocket support."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
  "fastapi>=0.129.0",
  "httpx>=0.28.1",
  "starlette>=0.52.1",
  "uvicorn>=0.41.0",
  "anyio>=4.12.1",
  "certifi>=2026.1.4",
  "pydantic>=2.12.5",
  "url-normalize>=2.2.1",
  "typing_extensions>=4.15.0",
  "websockets>=16.0"
]

[tool.setuptools.packages.find]
where = ["src"]